# MyGame

./: CMakeLists.txt  notes.md
dependencies/glad/: glad.h
shaders/: UPDATING_SHADERS.md  fragment.txt  vertex.txt
src/: config.h  glad.c  linear_algebra.cpp  linear_algebra.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
